reorganizing to untangle /docs mistake

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,10 @@
 - name: Home
+  link: /
+- name: Docs
   link: /docs/
 - name: Posts
   link: /posts/
+- name: Breadcrumbs
+  link: /breadcrumbs/
 - name: About
   link: /about/
