fixes and breadcrumb

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,5 +6,7 @@
   link: /posts/
 - name: Breadcrumbs
   link: /breadcrumbs/
+- name: Roguelike Tutorial
+  link: /roguelike-tutorial/
 - name: About
   link: /about/
