--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Assume For Simplicity
 email: webmaster@assumeforsimplicity.com
 description: >- # this means to ignore newlines until "baseurl:"
   Manage Time, Software, and Business, Easily  
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://assumeforsimplicity.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  jr101dallas
 auhor:  jr101dallas
 future: false
