--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,8 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://assumeforsimplicity.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  jr101dallas
-auhor:  jr101dallas
+repository: jr101dallas/jr101dallas.github.io
+author:  jr101dallas
 future: false
 
 # Build settings
