set keep history and keep files

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -17,3 +17,4 @@ jobs:
         with:
           token: ${{ secrets.ACTION_TOKEN }}
           target_branch: 'gh-pages'
+          keep_history: true
