--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@
   link: /posts/
 - name: Breadcrumbs
   link: /breadcrumbs/
-- name: Roguelike Tutorial
+- name: Roguelike
   link: /roguelike-tutorial/
 - name: About
   link: /about/
