--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -5,8 +5,8 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  schedule:
-    - cron:  '30 11,23 * * *'
+#  schedule:
+#    - cron:  '30 11,23 * * *'
 
 jobs:
   github-pages:
